--- a/BattleShip.css
+++ b/BattleShip.css
@@ -4,11 +4,10 @@ body {
 
 div#borad {
   position: relative;
-  ;
   width: 1024px;
   height: 836px;
   margin: auto;
-  background: url(borad.jpg) no-repeat;
+  background: url('board.jpg') no-repeat;
 }
 div#messageArea{
   position: absolute;
@@ -17,9 +16,9 @@ div#messageArea{
   color: rgb(83,175,19);
 }
 table{
-  position: relative;
+  position: absolute;
   left: 173px;
-  top: 98px,;
+  top: 98px;
   border-spacing: 0px;
 
 }
